--- a/conta.html
+++ b/conta.html
@@ -40,7 +40,7 @@
           <a class="nav-link" href="galeria.html">Galeria<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#rodape.html">Contato<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#rodape">Contato<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
