--- a/galeria.html
+++ b/galeria.html
@@ -2,61 +2,123 @@
 <html>
 
 <head>
-<meta charset="UTF-8">
-<title>ISY</title>
-<link rel="icon" type="imagem/png" href="img/icon.png" />
-<link href="css/style.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<title>ISY</title>
+	<link rel="icon" type="imagem/png" href="img/icon.png" />
+	<link href="css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="titulo">
-    <p> ISY - I support you </p>
-  </div>
-  <nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
-    <a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav m r-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="depoimentos.html">Depoimentos<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="conta.html">Conta<span
-          class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="mulheres.html">Leis e Direitos das Mulheres<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#rodape.html">Contato<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-</nav>
-
+	<div class="titulo">
+		<p> ISY - I support you </p>
+	</div>
+	<nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
+		<a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav m r-auto">
+			<li class="nav-item active">
+				<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="depoimentos.html">Depoimentos<span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="conta.html">Conta<span
+					class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="mulheres.html">Leis e Direitos das Mulheres<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="#rodape">Contato<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<a class="thumbnail" href="img/juntas.jpg">
+					<img class="img-thumbnail" src="img/juntas.jpg" alt="imagem" />
+				</a>
+				<p class="text-center">Teste de imagem</p>
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<a class="thumbnail" href="img/bruxas.jpg">
+					<img class="img-thumbnail" src="img/bruxas.jpg" alt="imagem" />
+				</a>
+				<p class="text-center">Teste de imagem</p>
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<a class="thumbnail" href="img/corpo.jpg">
+					<img class="img-thumbnail" src="img/corpo.jpg" alt="imagem" />
+				</a>
+				<p class="text-center">Teste de imagem</p>
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<a class="thumbnail" href="img/uniao.jpg">
+					<img class="img-thumbnail" src="img/uniao.jpg" alt="imagem" />
+				</a>
+				<p class="text-center">Teste de imagem</p>
+				</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<a class="thumbnail" href="img/simone.jpg">
+					<img class="img-thumbnail" src="img/simone.jpg" alt="imagem" />
+				</a>
+				<p class="text-center">Teste de imagem</p>
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<a class="thumbnail" href="img/grl.jpeg">
+					<img class="img-thumbnail" src="img/grl.jpeg" alt="imagem" />
+				</a>
+				<p class="text-center">Teste de imagem</p>
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<a class="thumbnail" href="img/frida.jpg">
+					<img class="img-thumbnail" src="img/frida.jpg" alt="imagem" />
+				</a>
+				<p class="text-center">Teste de imagem</p>
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<a class="thumbnail" href="img/maya.jpg">
+					<img class="img-thumbnail" src="img/maya.jpg" alt="imagem" />
+				</a>
+				<p class="text-center">Teste de imagem</p>
+			</a>
+		</a>
+	</div>
+</div>
+</div>
 
 
 <div id="rodape">
-		<h3 class="texto_contato"> Contato </h3>
-		<a href="mailto:contatoisy.site@gmail.com"> 
-			<img src="img/email.svg" id="imge"> 
-			<p id="textoR">Envie um e-mail para ISY</p>
-		</a>
+	<h3 class="texto_contato"> Contato </h3>
+	<a href="mailto:contatoisy.site@gmail.com"> 
+		<img src="img/email.svg" id="imge"> 
+		<p id="textoR">Envie um e-mail para ISY</p>
+	</a>
 
-	</div>
+</div>
 
 </body>
